--- a/css/main.css
+++ b/css/main.css
@@ -257,6 +257,11 @@ textarea {
      * or use the `javascript:` pseudo protocol
      */
 
+     body.noScroll { /* ...or body.dialogShowing */
+      overflow: hidden;
+    }
+
+
     a[href^="#"]:after,
     a[href^="javascript:"]:after {
         content: "";
@@ -389,3 +394,50 @@ body::-webkit-scrollbar { display: none; }
 }
 div{margin:0;padding:0;border:0;font-size:100%;font-family:inherit;vertical-align:baseline;}
 .services__hero .background_image{position:absolute;top:0;left:100%;width:110%;height:100%;display:block;opacity:1;background-repeat:no-repeat;background-position:50%;background-size:cover;}
+
+
+
+
+#overlay {
+  position: fixed; /* Sit on top of the page content */
+  display: none; /* Hidden by default */
+  width: 100%; /* Full width (cover the whole page) */
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0; 
+  left: 0;
+  right: 0;
+  bottom: 0;
+  
+  z-index: 99999; /* Specify a stack order in case you're using a different order for other elements */
+  cursor: pointer; /* Add a pointer on hover */
+
+  background-color: #16191c;
+  
+}
+
+
+.menu {
+  padding-top: 5em;
+  text-align:center
+}
+
+.menu a {
+  font-family: Plain,sans-serif;
+    font-size: 60px;
+    color: #fff;
+    font-weight: 500;
+  
+    margin-bottom: 30px;
+    opacity: .8;
+    
+}
+
+.inner {
+  width: 100vw;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
