--- a/css/main.css
+++ b/css/main.css
@@ -210,8 +210,108 @@ textarea {
    Modify as content requires.
    ========================================================================== */
 
-   @media only screen and (min-width: 35em) {
+@media only screen and (max-device-width: 375px) {
     /* Style adjustments for viewports that meet the condition */
+    body {
+      background: rgb(25, 25, 33);
+    }
+
+    .next_link span {
+      font-size: 2em !important;
+    }
+
+    .tinyslide figure  { 
+      padding-top:80px !important
+    }
+
+    .title {
+      font-size: 54px;
+      line-height: 1;
+      letter-spacing: -.5px;
+      margin-left: 0px;
+    }
+
+    .tinyslide figure figcaption { 
+      position: absolute; 
+      font-size: 4em; 
+      color: white; 
+      bottom: 8em; 
+      left: .5em; 
+      z-index: 2; 
+      opacity: 0; 
+    }
+
+    .slides img {
+      height: 100vh !important;
+      background-position: center !important;
+  }
+}
+
+.menu {
+  background-color: #16191c;
+  max-height: 100vh;
+  /* overflow: hidden;
+  display: flex; */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  right: auto;
+  left: 0;
+  width: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 99;
+  -webkit-transition: .4s;
+  -moz-tranition: .4s;
+  transition: .4s;
+}
+
+.menu ul a {
+    text-decoration: none;
+}
+
+.menu ul li a {
+  font-family: Plain,sans-serif;
+  font-size: 70px;
+  color: #fff;
+  font-weight: 500;
+  -webkit-transition: .3s;
+  -moz-tranition: .3s;
+  transition: .3s;
+  line-height: 1.2;
+  text-decoration: none;
+  border-bottom: 1px solid transparent;
+  display: inline-block;
+}
+
+.menu ul li a {
+  font-size: 52px;
+}
+
+.header__nav .menu ul li {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.menu ul {
+  list-style: none;
+  max-height: 100%;
+  padding: 0 35px;
+  text-align: center;
+  opacity: 0;
+  -webkit-transform: translateY(60px);
+  transform: translateY(60px);
+}
+
+.inner {
+  width: 100vw;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
 @media print,
@@ -416,11 +516,6 @@ div{margin:0;padding:0;border:0;font-size:100%;font-family:inherit;vertical-alig
 }
 
 
-.menu {
-  padding-top: 5em;
-  text-align:center
-}
-
 .menu a {
   font-family: Plain,sans-serif;
     font-size: 60px;
@@ -429,15 +524,92 @@ div{margin:0;padding:0;border:0;font-size:100%;font-family:inherit;vertical-alig
   
     margin-bottom: 30px;
     opacity: .8;
+
+    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 2s; /* Firefox < 16 */
+        -ms-animation: fadein 2s; /* Internet Explorer */
+         -o-animation: fadein 2s; /* Opera < 12.1 */
+            animation: fadein 2s;
     
 }
 
-.inner {
-  width: 100vw;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+.class-instruction {
+  text-align: center;
+  padding: 20px;
+}
+
+.class-instruction span {
+  background: white;
+  padding: 5px 10px;
+  margin: 0 auto;
+  border-radius: 12px;
+  font-family: Plain,sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  
+  
+}
+
+figcaption .title, #demo  {
+  color: #2E5F67;
+}
+
+#demo {
+  font-family: Plain,sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  display: block;
+  line-height: 1;
   position: relative;
+  transition: -webkit-transform .3s;
+  transition: transform .3s;
+  transition: transform .3s,-webkit-transform .3s;
+}
+
+
+
+.pagination li.active {
+  border-color: #2E5F67;
+}
+
+
+.no-js #loader { display: none;  }
+.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+.se-pre-con {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: url(../img/Preloader_6.gif) center no-repeat #fff;
 }
