--- a/css/tinyslide.css
+++ b/css/tinyslide.css
@@ -56,17 +56,92 @@ html, body { width: 100%; height: 100%; }
 
 .sub {
   font-family: Plain,sans-serif;
-    font-size: 40px;
-    color: #d3d3d3;
+  color: #fff;
+  width: 50%;
+  
+  font-size: 14px;
     font-weight: 300;
+    -webkit-transform: translateY(40px);
+    transform: translateY(40px);
+    margin-bottom: 55px;
     
+}
+
+a.view-project {
+  overflow: hidden;
+  height: 12px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0;
+  line-height: 1;
+  text-decoration: none;
+}
+
+a.view-project:before {
+  content: "";
+  width: 63px;
+  height: 1px;
+  background-color: #fff;
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 15px;
+  -webkit-transform: translateX(80px);
+  transform: translateX(80px);
+  opacity: 0;
+}
+
+a.view-project:before {
+  -webkit-animation-name: link_load;
+  animation-name: link_load;
+  -webkit-animation-duration: .4s;
+  animation-duration: .4s;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-delay: 1.5s;
+  animation-delay: 1.5s;
+}
+
+a.view-project span {
+  -webkit-animation-name: link_load;
+  animation-name: link_load;
+  -webkit-animation-duration: .6s;
+  animation-duration: .6s;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-delay: 1.3s;
+  animation-delay: 1.3s;
+}
+
+a.view-project span small {
+  font-family: Plain,sans-serif;
+  font-size: 14px;
+  color: #fff;
+  font-weight: 600;
+  display: block;
+  line-height: 1;
+  position: relative;
+  transition: -webkit-transform .3s;
+  transition: transform .3s;
+  transition: transform .3s,-webkit-transform .3s;
 }
 
 .title{
   font-family: Plain,sans-serif;
-    font-size: 90px;
     color: #fff;
     font-weight: 500;
+    
+    font-size: 127px;
+    font-weight: 500;
+    line-height: 1;
+    margin-left: -161px;
+    margin-bottom: 68px;
+    -webkit-transform: translateY(60px);
+    transform: translateY(60px);
 }
 
 @-webkit-keyframes fadeInRight { 0% { opacity: 0; -webkit-transform: translateX(20px); transform: translateX(20px); }
