--- a/css/main.css
+++ b/css/main.css
@@ -19,9 +19,9 @@
 }
 
 .sponser-logo{
-    margin-left: 80px;
+    /* margin-left: 80px;
     border-left: 1px solid #FFF;
-    padding-right: 10px;
+    padding-right: 10px; */
 }
 
 /*
